更新文档资料